fixed judgment names to H1 headings and improve spacing

--- a/public/judgment-name-with-ncn/v2-0/assets/combined-name-ncn.css
+++ b/public/judgment-name-with-ncn/v2-0/assets/combined-name-ncn.css
@@ -6,10 +6,11 @@
     font-size: 1.8rem;
 }
 
-p.judgment-name {
+h1.judgment-name {
+    font-size: 1.6rem;
     margin-top: 7px;
     margin: 5px 3px;
-}
+  }
 
 span.separator {
     font-weight: bold;
@@ -31,3 +32,4 @@ span.separator {
         width: 100%;
     }
 }
+
